[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/Log (1).png" type="Texture" id=1]
[ext_resource path="res://Log.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 5 )

[node name="Log" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="LogSprite" type="Sprite" parent="."]
scale = Vector2( 2, 3.75 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Log_collide" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Log_collide"]
shape = SubResource( 2 )

[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]
