[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/1log.png" type="Texture" id=1]
[ext_resource path="res://Log.gd" type="Script" id=2]
[ext_resource path="res://Log_collide.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 39, 7 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 39, 8 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 39, 7 )

[node name="Log" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="LogSprite" type="Sprite" parent="."]
position = Vector2( 11, 18 )
scale = Vector2( 1.32031, 1.4375 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Log_collide" type="Area2D" parent="."]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Log_collide"]
shape = SubResource( 2 )

[node name="AlligatorReplace" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AlligatorReplace"]
shape = SubResource( 1 )

[node name="OtterCollide" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="OtterCollide"]
visible = false
shape = SubResource( 4 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="body_entered" from="AlligatorReplace" to="." method="_on_AlligatorReplace_body_entered"]
[connection signal="body_exited" from="AlligatorReplace" to="." method="_on_AlligatorReplace_body_exited"]
[connection signal="body_entered" from="OtterCollide" to="." method="_on_OtterCollide_body_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
